--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,4 +15,15 @@
     !=css :app
     !=js :app
 
-  %body= yield
+  %body
+    %header
+      .navbar
+        .navbar-inner
+          %a{:class => 'brand', :href => '/'} Uber URL Shortener
+          %ul{:class => 'nav'}
+            %li
+              %a{:href => '/'} Home
+            %li
+              %a{:href => '/about'} About
+    .main= yield 
+
