Fixed bootstrap3 elements. Cleaned up form. Fixed front end formating. Hopefully is responsive

--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -6,6 +6,16 @@
 .mainform {
   margin-right: auto;
   margin-left: auto;
+  width: 50%;
+}
+
+#url {
+  width: 400px;
+}
+
+.success {
+  margin-right: auto;
+  margin-left: auto;
   width: 400px;
 }
 
