--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -3,11 +3,11 @@
   padding-top: 50px;
 }
 
-.mainform {
+/*.mainform {
   margin-right: auto;
   margin-left: auto;
   width: 50%;
-}
+}*/
 
 #url {
   width: 400px;
