fixed all of the bugs for now except adding http when not present. have method written. need to apply it without messing up uniqueness validation. mobile optimised

--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -9,13 +9,9 @@
   width: 50%;
 }*/
 
-#url {
-  width: 400px;
-}
-
-.success {
+/*.success {
   margin-right: auto;
   margin-left: auto;
   width: 400px;
 }
-
+*/
