--- a/views/success.haml
+++ b/views/success.haml
@@ -1,2 +1,3 @@
-%h1{:class => 'success'} #{@base_url}/#{@short_url.shorten}  
-
+.row
+  .col-lg-6.col-lg-offset-3
+    %h1 #{@base_url}/#{@short_url.shorten}  
